--- a/core/g/gcc/10/package.xml
+++ b/core/g/gcc/10/package.xml
@@ -27,7 +27,9 @@
           - to fix the path offset.
           -
           - Disable Ada, D and Modula-2 (gm2) related patches, as well as
-          - g++-multiarch-incdir.diff.
+          -
+          - * gcc-distro-spec.diff
+          - * g++-multiarch-incdir.diff.
          -->
 
         <sources>
@@ -47,7 +49,9 @@
                 <file src="patches/git-updates.diff"/>
                 <file src="patches/gcc-gfdl-build.diff"/>
                 <file src="patches/gcc-textdomain.diff"/>
+                <!--
                 <file src="patches/gcc-distro-specs.diff"/>
+                -->
                 <file src="patches/gcc-driver-extra-langs.diff"/>
                 <file src="patches/gcc-hash-style-gnu.diff"/>
                 <file src="patches/libstdc++-pic.diff"/>
