--- a/core/m/m4/package.xml
+++ b/core/m/m4/package.xml
@@ -22,18 +22,21 @@
         <sources>
             <file src="m4-1.4.18.tar.xz" subdir="sources"
                 sha256sum="f2c1e86ca0a404ff281631bdc8377638992744b175afb806e25871a24a934e07"/>
-            <file src="debian-patches-2.tar.gz" subdir="patches"
-                sha256sum="8d250ede7c3a1ed0ff9dc89a341b39b2ef336cc9fc4f314622ddd1608ea8d014"/>
+            <file src="debian-patches-5.tar.gz" subdir="patches"
+                sha256sum="84471390b049e18142a7696c43636e607dd98b779b72f815cc10150f3bbef48d"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
                 <file src="patches/01-fix-ftbfs-with-glibc-2.28.patch"/>
+                <file src="patches/02-documentencoding.patch"/>
+                <file src="patches/03-remove-date-from-m4-texinfo-file.patch"/>
             </patchset>
         </patches>
 
         <requires>
             <package name="libsigsegv-dev"/>
+            <package name="texinfo"/>
         </requires>
 
         <xi:include href="rules.xml"/>
