--- a/core/p/pam/package.xml
+++ b/core/p/pam/package.xml
@@ -25,7 +25,7 @@
             <file src="debian-patches-4.tar.gz" subdir="patches"
                 sha256sum="1fd1ce081ab5cbb5dfd9a9681b0c0b0485e9cfa554e41661a0b4ca82848e6e9c"/>
             <file src="bolt-patches-1.tar.gz" subdir="patches"
-                sha256sum="713f8a15e7119760f16c849f7f67f83a8b9f387aa423fb1af3bc00e375ab6dd4"/>
+                sha256sum="6fe20f52461d65e4da3f281e6bba578664bdada8d60bb9ddc6f57b17305160d6"/>
             <file src="pam-etc.tar.gz" subdir="extra"
                 sha256sum="9962c128162a72ea4432f2ec7927bfbe34414041283927ebb62204f2b7e66293"/>
         </sources>
@@ -61,6 +61,7 @@
                 <file src="patches/pam_mkhomedir_stat_before_opendir"/>
                 <!-- Bolt -->
                 <file src="patches/gentoo-fix-compat.patch"/>
+                <file src="patches/upstream-no-getwpent_r.diff"/>
             </patchset>
         </patches>
 
