libarchive: upgrade to version from Debian Bullseye

--- a/core/a/libarchive/package.xml
+++ b/core/a/libarchive/package.xml
@@ -48,21 +48,24 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="libarchive-3.3.3.tar.gz" subdir="sources"
-                sha256sum="ba7eb1781c9fbbae178c4c6bad1c6eb08edab9a1496c64833d1715d022b30e2e"/>
-            <file src="debian-patches-4.tar.gz" subdir="patches"
-                sha256sum="6a5570e526513677ed01478fe038b46f88ed167ef6ba10f490775c57ae532910"/>
+            <file src="libarchive-3.4.3.tar.xz" subdir="sources"
+                sha256sum="0bfc3fd40491768a88af8d9b86bf04a9e95b6d41a94f9292dbc0ec342288c05f"/>
+            <file src="debian-patches-2.tar.gz" subdir="patches"
+                sha256sum="ede8696e952fd86b59bfce34e550e865f39ffc5982633be6c3e9d360b8b29301"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
-                <file src="patches/CVE-2018-1000877.patch"/>
-                <file src="patches/CVE-2018-1000878.patch"/>
-                <file src="patches/CVE-2018-1000879.patch"/>
-                <file src="patches/CVE-2018-1000880.patch"/>
-                <file src="patches/CVE-2019-1000019.patch"/>
-                <file src="patches/CVE-2019-1000020.patch"/>
-                <file src="patches/zip-nullptr.patch"/>
+                <file src="patches/typos.patch"/>
+                <file src="patches/upstream-cpio-hardlink-type.patch"/>
+                <file src="patches/upstream-cpio-rdev.patch"/>
+                <file src="patches/upstream-isint-w.patch"/>
+                <file src="patches/upstream-unneeded-strlen.patch"/>
+                <file src="patches/upstream-hardlink-to-self.patch"/>
+                <file src="patches/upstream-set-format-error.patch"/>
+                <file src="patches/upstream-rar-read-format.patch"/>
+                <file src="patches/upstream-memory-stdlib.patch"/>
+                <file src="patches/upstream-max-comp-level.patch"/>
             </patchset>
         </patches>
 
