--- a/core/g/libgpg-error/package.xml
+++ b/core/g/libgpg-error/package.xml
@@ -17,15 +17,20 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="libgpg-error-1.35.tar.bz2" subdir="sources"
-                sha256sum="cbd5ee62a8a8c88d48c158fff4fc9ead4132aacd1b4a56eb791f9f997d07e067"/>
-            <file src="debian-patches-1.tar.gz" subdir="patches"
-                sha256sum="14c49174fa3099ee24c1668700876d0ece2aae261c15d7a330caad104dc11023"/>
+            <file src="libgpg-error-1.38.tar.bz2" subdir="sources"
+                sha256sum="d8988275aa69d7149f931c10442e9e34c0242674249e171592b430ff7b3afd02"/>
+            <file src="debian-patches-2.tar.gz" subdir="patches"
+                sha256sum="39ec43024f26a641a385ed68e8051169ec0752d0e22a2a1147a509aaf32cdd8a"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
                 <file src="patches/0001-Remove-upstream-git-fanciness.patch"/>
+                <file src="patches/0002-build-Fix-cross-compiling-into-a-separate-build-dir.patch"/>
+                <file src="patches/0003-build-On-cross-build-detect-host-s-objdump.patch"/>
+                <file src="patches/0004-build-Fix-command-line-to-make-src-dir.patch"/>
+                <file src="patches/0005-build-Fix-the-gpg-error-config-test-for-cross-build.patch"/>
+                <file src="patches/0006-include-gen-lock-obj.sh.patch"/>
             </patchset>
         </patches>
 
